Pushed string resource, reorganized files, Sorry Robino :(

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.jamal.orderhr_noninstant.MainActivity">
+    tools:context="com.example.jamal.orderhr_noninstant.Activities.MainActivity">
 
     <fragment
         android:id="@+id/list"
