Created functions for selecting specific classrooms and reserving specific cells

--- a/app/src/main/res/layout/activity_schedule.xml
+++ b/app/src/main/res/layout/activity_schedule.xml
@@ -203,7 +203,10 @@
         android:layout_height="2dip"
         android:background="#FF909090" />
 
-    <TableRow android:id="@+id/timeslot_15">
+    <TableRow
+        android:id="@+id/timeslot_15"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
         <TextView
             android:layout_column="0"
@@ -211,5 +214,6 @@
             android:text="@string/timeslot_fifteen" />
     </TableRow>
 
+    <Button />
 
 </TableLayout>
