DatetoColumn method now works perfectly, started refractoring the activities to make use of a single fragment instead of both having their own same methods

--- a/app/src/main/res/layout/fragment_schedule.xml
+++ b/app/src/main/res/layout/fragment_schedule.xml
@@ -1,14 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/fragment_schedule"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/fragment_scheduleLinear"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:stretchColumns="1">
+    android:orientation="horizontal">
+<TableLayout
+    android:id="@+id/fragment_schedule"
+    android:stretchColumns="1"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:orientation="horizontal"
+    android:weightSum="6">
 
     <TableRow>
 
         <TextView
-            android:layout_weight="1"
             android:id="@+id/day_2"
             android:layout_column="1"
             android:padding="3dip"
@@ -16,7 +23,7 @@
             android:textSize="24sp" />
 
         <TextView
-            android:layout_weight="1"
+
             android:id="@+id/day_3"
             android:layout_column="2"
             android:padding="3dip"
@@ -24,7 +31,7 @@
             android:textSize="24sp" />
 
         <TextView
-            android:layout_weight="1"
+
             android:id="@+id/day_4"
             android:layout_column="3"
             android:padding="3dip"
@@ -32,7 +39,7 @@
             android:textSize="24sp" />
 
         <TextView
-            android:layout_weight="1"
+
             android:id="@+id/day_5"
             android:layout_column="4"
             android:padding="3dip"
@@ -40,7 +47,7 @@
             android:textSize="24sp" />
 
         <TextView
-            android:layout_weight="1"
+
             android:id="@+id/day_6"
             android:layout_column="5"
             android:padding="3dip"
@@ -207,3 +214,4 @@
     <Button />
 
 </TableLayout>
+</LinearLayout>
