Used Login from standard android native, refractored the code to make use of scheduleFragment

--- a/app/src/main/res/layout/activity_schedule.xml
+++ b/app/src/main/res/layout/activity_schedule.xml
@@ -1,218 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/activity_schedule"
+<android.support.constraint.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:stretchColumns="1">
+    android:layout_height="match_parent">
 
-    <TableRow>
+    <fragment
+        android:id="@+id/list"
+        android:name="com.example.jamal.orderhr_noninstant.ScheduleFragment"
+        android:layout_width="392dp"
+        android:layout_height="422dp"
+        android:layout_marginEnd="8dp"
+        android:layout_weight="1"
+        tools:layout="@layout/fragment_schedule" />
 
-        <TextView
-            android:id="@+id/day_2"
-            android:layout_column="1"
-            android:padding="3dip"
-            android:text="@string/day_mon"
-            android:textSize="24sp" />
-
-        <TextView
-            android:id="@+id/day_3"
-            android:layout_column="2"
-            android:padding="3dip"
-            android:text="@string/day_tue"
-            android:textSize="24sp" />
-
-        <TextView
-            android:id="@+id/day_4"
-            android:layout_column="3"
-            android:padding="3dip"
-            android:text="@string/day_wed"
-            android:textSize="24sp" />
-
-        <TextView
-            android:id="@+id/day_5"
-            android:layout_column="4"
-            android:padding="3dip"
-            android:text="@string/day_thu"
-            android:textSize="24sp" />
-
-        <TextView
-            android:id="@+id/day_6"
-            android:layout_column="5"
-            android:padding="3dip"
-            android:text="@string/day_fri"
-            android:textSize="24sp" />
-
-    </TableRow>
-
-    <TableRow android:id="@+id/timeslot_1">
-
-
-        <TextView
-            android:layout_column="0"
-            android:padding="3dip"
-            android:text="@string/timeslot_one" />
-
-    </TableRow>
-
-    <TableRow android:id="@+id/timeslot_2">
-
-        <TextView
-            android:layout_column="0"
-            android:padding="3dip"
-            android:text="@string/timeslot_two" />
-    </TableRow>
-
-    <TableRow android:id="@+id/pause_1">
-
-        <TextView
-            android:layout_column="0"
-            android:padding="3dip"
-            android:text="@string/pause_one" />
-    </TableRow>
-
-    <View
-        android:layout_height="2dip"
-        android:background="#FF909090" />
-
-    <TableRow android:id="@+id/timeslot_3">
-
-        <TextView
-            android:layout_column="0"
-            android:padding="3dip"
-            android:text="@string/timeslot_three" />
-    </TableRow>
-
-    <TableRow android:id="@+id/timeslot_4">
-
-        <TextView
-            android:padding="3dip"
-            android:text="@string/timeslot_four" />
-    </TableRow>
-
-    <View
-        android:layout_height="2dip"
-        android:background="#FF909090" />
-
-    <TableRow android:id="@+id/timeslot_5">
-
-        <TextView
-            android:padding="3dip"
-            android:text="@string/timeslot_five" />
-
-    </TableRow>
-
-    <TableRow android:id="@+id/timeslot_6">
-
-        <TextView
-            android:layout_column="0"
-            android:padding="3dip"
-            android:text="@string/timeslot_six" />
-    </TableRow>
-
-    <View
-        android:layout_height="2dip"
-        android:background="#FF909090" />
-
-    <TableRow android:id="@+id/timeslot_7">
-
-        <TextView
-            android:layout_column="0"
-            android:padding="3dip"
-            android:text="@string/timeslot_seven" />
-    </TableRow>
-
-
-    <TableRow android:id="@+id/timeslot_8">
-
-        <TextView
-            android:layout_column="0"
-            android:padding="3dip"
-            android:text="@string/timeslot_eight" />
-    </TableRow>
-
-    <TableRow android:id="@+id/pause_2">
-
-        <TextView
-            android:layout_column="0"
-            android:padding="3dip"
-            android:text="@string/pause_two" />
-    </TableRow>
-
-    <View
-        android:layout_height="2dip"
-        android:background="#FF909090" />
-
-    <TableRow android:id="@+id/timeslot_9">
-
-        <TextView
-            android:layout_column="0"
-            android:padding="3dip"
-            android:text="@string/timeslot_nine" />
-    </TableRow>
-
-    <TableRow android:id="@+id/timeslot_10">
-
-        <TextView
-            android:layout_column="0"
-            android:padding="3dip"
-            android:text="@string/timeslot_ten" />
-    </TableRow>
-
-    <View
-        android:layout_height="2dip"
-        android:background="#FF909090" />
-
-    <TableRow android:id="@+id/timeslot_11">
-
-        <TextView
-            android:layout_column="0"
-            android:padding="3dip"
-            android:text="@string/timeslot_eleven" />
-    </TableRow>
-
-    <TableRow android:id="@+id/timeslot_12">
-
-        <TextView
-            android:layout_column="0"
-            android:padding="3dip"
-            android:text="@string/timeslot_twelve" />
-    </TableRow>
-
-    <View
-        android:layout_height="2dip"
-        android:background="#FF909090" />
-
-    <TableRow android:id="@+id/timeslot_13">
-
-        <TextView
-            android:layout_column="0"
-            android:padding="3dip"
-            android:text="@string/timeslot_thirteen" />
-    </TableRow>
-
-    <TableRow android:id="@+id/timeslot_14">
-
-        <TextView
-            android:layout_column="0"
-            android:padding="3dip"
-            android:text="@string/timeslot_fourteen" />
-    </TableRow>
-
-    <View
-        android:layout_height="2dip"
-        android:background="#FF909090" />
-
-    <TableRow
-        android:id="@+id/timeslot_15"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <TextView
-            android:layout_column="0"
-            android:padding="3dip"
-            android:text="@string/timeslot_fifteen" />
-    </TableRow>
-
-    <Button />
-
-</TableLayout>
+</android.support.constraint.ConstraintLayout>
