--- a/app/src/main/res/layout/activity_makedefunctreport.xml
+++ b/app/src/main/res/layout/activity_makedefunctreport.xml
@@ -75,7 +75,8 @@
             <Spinner
                 android:id="@+id/spinnerType"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:entries="@array/defunctypes"/>
 
         </LinearLayout>
 
