Structural improvement and defunct basic list wip

--- a/app/src/main/res/layout/activity_defunctlist.xml
+++ b/app/src/main/res/layout/activity_defunctlist.xml
@@ -50,5 +50,10 @@
                     android:entries="@array/defunctypes" />
             </LinearLayout>
         </LinearLayout>
+
+        <ListView
+            android:id="@+id/listviewDefuncts"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
     </LinearLayout>
 </android.support.constraint.ConstraintLayout>
