--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -41,15 +41,29 @@
         android:layout_width="80dp"
         android:layout_height="62dp"
         android:layout_marginBottom="16dp"
-        android:layout_marginEnd="149dp"
-        android:layout_marginStart="34dp"
+        android:layout_marginEnd="31dp"
+        android:layout_marginStart="152dp"
         android:layout_marginTop="11dp"
         android:onClick="ClickEasyScan"
-        android:text="Button"
+        android:text="Easy Scan!"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/button_schedule"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/list" />
+        app:layout_constraintTop_toBottomOf="@+id/list"
+        app:layout_constraintVertical_bias="0.0"
+        tools:text="Easy Scan!" />
+
+    <Button
+        android:id="@+id/buttonDefunctLists"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="26dp"
+        android:layout_marginTop="24dp"
+        android:onClick="ClickDefunctList"
+        android:text="Defuncts"
+        app:layout_constraintEnd_toStartOf="@+id/button"
+        app:layout_constraintTop_toBottomOf="@+id/list"
+        tools:text="Defuncts" />
 
 
 </android.support.constraint.ConstraintLayout>
