--- a/app/src/main/res/layout/activity_defunctlist.xml
+++ b/app/src/main/res/layout/activity_defunctlist.xml
@@ -24,12 +24,25 @@
             android:layout_height="67dp"
             android:orientation="horizontal">
 
-            <TextView
-                android:id="@+id/textView4"
-                android:layout_width="358dp"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:text="Filters" />
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/textView"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Filters:" />
+
+                <Button
+                    android:id="@+id/button2"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:onClick="OnClickSearch"
+                    android:text="Search" />
+            </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -44,7 +57,7 @@
                     android:text="Hide Closed Defuncts" />
 
                 <Spinner
-                    android:id="@+id/spinner"
+                    android:id="@+id/spinnertypefiler"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:entries="@array/defunctypes" />
