Added filtering and caching options to defunctlist

--- a/app/src/main/res/layout/activity_defunctlist.xml
+++ b/app/src/main/res/layout/activity_defunctlist.xml
@@ -60,7 +60,7 @@
                     android:id="@+id/spinnertypefiler"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:entries="@array/defunctypes" />
+                    android:entries="@array/defunctfilters" />
             </LinearLayout>
         </LinearLayout>
 
