--- a/app/src/main/res/layout/fragment_schedule.xml
+++ b/app/src/main/res/layout/fragment_schedule.xml
@@ -5,12 +5,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="horizontal">
+
     <TableLayout
         android:id="@+id/fragment_schedule"
-        android:stretchColumns="1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="343dp"
+        android:layout_height="364dp"
         android:orientation="horizontal"
+        android:stretchColumns="1"
         android:weightSum="6">
 
         <TableRow>
@@ -57,7 +58,6 @@
         </TableRow>
 
         <TableRow android:id="@+id/timeslot_1">
-
 
 
             <TextView
