hallulojah make bookings now work

--- a/app/src/main/res/layout/activity_makebooking.xml
+++ b/app/src/main/res/layout/activity_makebooking.xml
@@ -59,6 +59,12 @@
             android:layout_height="wrap_content"
             android:text="Times:" />
 
+        <TextView
+            android:id="@+id/textviewWeeknumber"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Weeknumber" />
+
         <CheckBox
             android:id="@+id/Available"
             android:layout_width="match_parent"
